# hark-fd

./: README.md
hark-fd/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  how to change the lboost_thread.txt  makeref.sh
hark-fd/debian/: README  _control_precise  _control_trusty  asrasp_remover.pl  changelog  control  copyright  debuild.sh  harkfd.install  rules
hark-fd/include/: CGHDSS_exec.h  CPF_exec.h  CPF_init_state_noise.h  Cexec.h  Cexec_NH.h  GHDSS_MathMat2.h  GHDSS_MathMatDouble.h  GHDSS_SeparateMat.h  HarkData.h  HarkFileIO.h  HarkFileIO_NH.h  HarkParamsObjects.h  LocalizationFunction.hpp  LocalizationFunctionMUSIC.hpp  LocalizationMUSIC.hpp  LocalizationMUSIC_NH.hpp  Map.h  PF_Init.h  PF_est_leak.h  PF_est_noise.h  PF_est_rev.h  PF_est_sn.h  PF_est_state_noise.h  PF_est_voice_p.h  PF_est_zeta.h  PF_exec.h  PF_hypergeom_gain.h  PF_init_state_noise.h  PF_values.h  SDLsound.h  Source.h  SpectralMean.hpp  Tensor.h  Time.h  TimeStamp.h  VecStrVecFlt.h  endian.hpp  evd.hpp  fft.hpp  htkheader.hpp  (+5 more)
hark-fd/librecorder/: ALSARecorder.cpp  ALSARecorder.hpp  ASIORecorder.cpp  ASIORecorder.hpp  ASRASPRecorder.cpp  ASRASPRecorder.hpp  HARKNETAPIRecorder.cpp  HARKNETAPIRecorder.hpp  KANEKORecorder.cpp  KANEKORecorder.hpp  Makefile.am  Makefile.in  RASP24Recorder.cpp  RASP24Recorder.hpp  RASPLCRecorder.cpp  RASPLCRecorder.hpp  RASPRecorder.cpp  RASPRecorder.hpp  Recorder.hpp  SINICHRecorder.cpp  SINICHRecorder.hpp  WSRecorder.cpp  WSRecorder.hpp  endian.hpp  harknetapirecord.cpp  kanekorecord.cpp  main.cpp  rasp24record.cpp  rasplcrecord.cpp  rasprec.cpp  sinmain.cpp  wsrecord.cpp
hark-fd/libseparation/: ArrayInit.c  ArrayInit.h  CMICARY_Matrix.cpp  CMICARY_Matrix.h  MICARYHA_struct.h  MICARY_GHDSS_struct.c  MICARY_GHDSS_struct.h  MICARY_PF_Struct.h  MICARY_TimeWin.c  MICARY_TimeWin.h  MICARY_def.h  MICARY_struct.h  Makefile.am  Makefile.in
hark-fd/m4/: boost.m4
hark-fd/src/: AudioStreamFromMic.cc  AudioStreamFromWave.cc  BGNEstimator.cc  CGHDSS_exec.cpp  CMChannelSelector.cc  CMConjEachElement.cc  CMDivideEachElement.cc  CMIdentityMatrix.cc  CMInverseMatrix.cc  CMLoad.cc  CMMakerFromFFT.cc  CMMakerFromFFTwithFlag.cc  CMMultiplyEachElement.cc  CMMultiplyMatrix.cc  CMSave.cc  CPF_exec.cpp  CPF_init_state_noise.cpp  CalcSpecAddPower.cc  CalcSpecSubGain.cc  Cexec.cpp  Cexec_NH.cpp  ChannelSelector.cc  CombineSource.cc  ConstantLocalization.cc  DataLogger.cc  Delta.cc  DeltaMask.cc  DeltaPowerMask.cc  DisplayLocalization.cc  EstimateLeak.cc  FeatureRemover.cc  GHDSS.cc  GHDSS_MathMat2.c  GHDSS_MathMatDouble.c  GHDSS_NH.cc  GHDSS_SeparateMat.c  GHDSS_SeparateMat.cpp  HRLE.cc  HarkDataStreamSender.cc  HarkFileIO.cpp  (+58 more)
hark-fd/src/normalize_MUSIC_src/: Array2D.hpp  CMakeLists.txt  Configuration.hpp  CsvIO.hpp  PreciseNumber.hpp  test_PF.cpp  test_VBHMM.cpp  track_PF.cpp  track_PF.h  train_VBHMM.cpp  train_VBHMM.h  utilities.hpp
libharknetapi/: Makefile  hark-netapi.c  hark-netapi.h
libharknetapi/debian/: README  changelog  control  files
